--- a/js-form.html
+++ b/js-form.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Form</title>
+    <title> Form JS</title>
 </head>
 <body style="display: flex; align-items: center; justify-content: center; height: 100vh; margin: 0;">
     <fieldset style="width: fit-content;">
-        <legend>Personal Details</legend><br>
+        <legend>Details</legend><br>
         <form action="" method="GET" id="details">
             Name: <input type="text" name="name" id="name">
             <div id="namediv"></div><br>
